# ade-detection

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
src/ade_detection/: serve_ade.py  train_ade.py
src/ade_detection/data/: build_omop_tables.py  extract_ade_labels.py
src/ade_detection/features/: build_features.py  temporal_split.py
src/ade_detection/labeling/: ade_mappings.py  build_labeling_frame.py  drug_normalization.py  labeling_functions.py  run_label_model.py
src/ade_detection/models/: calibrate.py  explain.py  fairness_audit.py  nlp_ade_extractor.py  risk_classifier.py
src/ade_detection/serving/: serve_ade.py
tests/: test_ade_mappings.py  test_build_labeling_frame.py  test_calibrate.py  test_drug_normalization.py  test_explain.py  test_fairness_audit.py  test_features.py  test_labeling_functions.py  test_risk_classifier.py  test_serve_ade.py  test_smoke.py
